[gd_scene load_steps=6 format=3 uid="uid://bw8ywb7ur80oh"]

[ext_resource type="Script" uid="uid://be2cosgbc4a5" path="res://src/ui/AITutorScene.gd" id="1_qshfc"]
[ext_resource type="Script" uid="uid://ddb5y4mogjw6g" path="res://src/ui/VirtualKeyboard.gd" id="2_keyboard"]
[ext_resource type="Theme" uid="uid://b2fedi5eycrnx" path="res://assets/themes/Wenrexa.tres" id="3_theme"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gjwuf"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s4qit"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="AITutorScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_theme")
script = ExtResource("1_qshfc")

[node name="BackgroundGradient" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.54727364, 0.0008273676, 0.66026473, 1)

[node name="MainMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="MainVBox" type="VBoxContainer" parent="MainMargin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TopBar" type="HBoxContainer" parent="MainMargin/MainVBox"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="BackButton" type="Button" parent="MainMargin/MainVBox/TopBar"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "← Back"

[node name="TitleLabel" type="Label" parent="MainMargin/MainVBox/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "AI Tutor Mode"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="MainMargin/MainVBox/TopBar"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="ContentScroll" type="ScrollContainer" parent="MainMargin/MainVBox"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ContentVBox" type="VBoxContainer" parent="MainMargin/MainVBox/ContentScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="ChatPanel" type="PanelContainer" parent="MainMargin/MainVBox/ContentScroll/ContentVBox"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gjwuf")

[node name="ChatMargin" type="MarginContainer" parent="MainMargin/MainVBox/ContentScroll/ContentVBox/ChatPanel"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="ChatVBox" type="VBoxContainer" parent="MainMargin/MainVBox/ContentScroll/ContentVBox/ChatPanel/ChatMargin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ChatHeader" type="Label" parent="MainMargin/MainVBox/ContentScroll/ContentVBox/ChatPanel/ChatMargin/ChatVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "AI Tutor"

[node name="MessagesScroll" type="ScrollContainer" parent="MainMargin/MainVBox/ContentScroll/ContentVBox/ChatPanel/ChatMargin/ChatVBox"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 3

[node name="MessagesContainer" type="VBoxContainer" parent="MainMargin/MainVBox/ContentScroll/ContentVBox/ChatPanel/ChatMargin/ChatVBox/MessagesScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="InputArea" type="HBoxContainer" parent="MainMargin/MainVBox/ContentScroll/ContentVBox/ChatPanel/ChatMargin/ChatVBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="InputField" type="LineEdit" parent="MainMargin/MainVBox/ContentScroll/ContentVBox/ChatPanel/ChatMargin/ChatVBox/InputArea"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
placeholder_text = "Type your message..."

[node name="SendButton" type="Button" parent="MainMargin/MainVBox/ContentScroll/ContentVBox/ChatPanel/ChatMargin/ChatVBox/InputArea"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Send"

[node name="StatusLabel" type="Label" parent="MainMargin/MainVBox/ContentScroll/ContentVBox/ChatPanel/ChatMargin/ChatVBox"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Thinking..."

[node name="HTTPRequest" type="HTTPRequest" parent="MainMargin/MainVBox/ContentScroll/ContentVBox/ChatPanel"]

[node name="SolverPanel" type="PanelContainer" parent="MainMargin/MainVBox/ContentScroll/ContentVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_s4qit")

[node name="SolverMargin" type="MarginContainer" parent="MainMargin/MainVBox/ContentScroll/ContentVBox/SolverPanel"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="SolverVBox" type="VBoxContainer" parent="MainMargin/MainVBox/ContentScroll/ContentVBox/SolverPanel/SolverMargin"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="SolverHeader" type="Label" parent="MainMargin/MainVBox/ContentScroll/ContentVBox/SolverPanel/SolverMargin/SolverVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Step-by-Step Solver"

[node name="ProblemDisplay" type="RichTextLabel" parent="MainMargin/MainVBox/ContentScroll/ContentVBox/SolverPanel/SolverMargin/SolverVBox"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 29
theme_override_font_sizes/bold_font_size = 29
theme_override_font_sizes/bold_italics_font_size = 26
theme_override_font_sizes/italics_font_size = 26
theme_override_font_sizes/mono_font_size = 26
bbcode_enabled = true
text = "[i]Problem will appear here after AI generates it[/i]"
fit_content = true
scroll_active = false

[node name="StepsScroll" type="ScrollContainer" parent="MainMargin/MainVBox/ContentScroll/ContentVBox/SolverPanel/SolverMargin/SolverVBox"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3

[node name="StepsContainer" type="VBoxContainer" parent="MainMargin/MainVBox/ContentScroll/ContentVBox/SolverPanel/SolverMargin/SolverVBox/StepsScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="ButtonsArea" type="VBoxContainer" parent="MainMargin/MainVBox/ContentScroll/ContentVBox/SolverPanel/SolverMargin/SolverVBox"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="AddStepButton" type="Button" parent="MainMargin/MainVBox/ContentScroll/ContentVBox/SolverPanel/SolverMargin/SolverVBox/ButtonsArea"]
visible = false
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "+ Add Step"

[node name="FinishButton" type="Button" parent="MainMargin/MainVBox/ContentScroll/ContentVBox/SolverPanel/SolverMargin/SolverVBox/ButtonsArea"]
visible = false
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Submit for Feedback"

[node name="NewProblemButton" type="Button" parent="MainMargin/MainVBox/ContentScroll/ContentVBox/SolverPanel/SolverMargin/SolverVBox/ButtonsArea"]
visible = false
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Try Another Problem"

[node name="VirtualKeyboard" type="Control" parent="MainMargin/MainVBox"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
script = ExtResource("2_keyboard")

[node name="InputControls" type="HBoxContainer" parent="MainMargin/MainVBox"]
visible = false
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="EraseButton" type="Button" parent="MainMargin/MainVBox/InputControls"]
visible = false
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "⌫ Erase"

[node name="ClearButton" type="Button" parent="MainMargin/MainVBox/InputControls"]
visible = false
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Clear Input"
